# supply-chain-control-tower

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  render.yaml
.github/workflows/: ci.yml
docker/: entrypoint.sh
docs/adr/: 0001-layered-architecture.md  0002-prophet-isolation.md
scripts/: __init__.py  download_data.py  make_figures.py
src/sctower/: __init__.py  cli.py  config.py  logging.py
src/sctower/app/: __init__.py  data.py  main.py  theme.py
src/sctower/app/assets/: styles.css
src/sctower/app/pages/: __init__.py  forecast.py  inventory.py  overview.py  scenarios.py
src/sctower/domain/: __init__.py  inventory.py  metrics.py
src/sctower/domain/forecasting/: __init__.py  base.py  gbm.py  naive.py  prophet_model.py  sarima.py
src/sctower/io/: __init__.py  db.py  loaders.py
src/sctower/services/: __init__.py  alerts.py  backtest.py  pipeline.py  scenarios.py
tests/: conftest.py  test_alerts.py  test_app.py  test_backtest.py  test_config_logging.py  test_db.py  test_forecasting.py  test_inventory.py  test_loaders.py  test_metrics.py  test_pipeline.py  test_scenarios.py
