[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sctower"
version = "0.1.0"
description = "Supply Chain Control Tower - demand forecasting, inventory optimization and stockout/overstock alerting on real retail data."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Ardin Etienne KIMBATSA" }]
keywords = ["supply-chain", "demand-forecasting", "inventory-optimization", "time-series", "dash"]

dependencies = [
    "pandas>=2.2,<3.0",
    "numpy>=1.26,<3.0",
    "pyarrow>=15.0",
    "pydantic>=2.7,<3.0",
    "pydantic-settings>=2.3,<3.0",
    "structlog>=24.1",
    "SQLAlchemy>=2.0,<3.0",
    "statsmodels>=0.14",
    "scikit-learn>=1.5",
    "lightgbm>=4.3",
    "holidays>=0.50",
    "plotly>=5.22",
    "dash>=2.17",
    "dash-bootstrap-components>=1.6",
    "gunicorn>=22.0",
]

[project.optional-dependencies]
# Prophet is isolated: its cmdstan/wheel story is fragile on Python 3.13 / Windows.
# Installed in Docker (python:3.12) and CI; the forecasting registry degrades
# gracefully when it is absent. See docs/adr/0002-prophet-isolation.md.
prophet = ["prophet>=1.1.5"]
postgres = ["psycopg[binary]>=3.1"]
kaggle = ["kaggle>=1.6"]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "black>=24.4",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "pandas-stubs>=2.2",
    "types-requests>=2.32",
]

[project.scripts]
sctower = "sctower.cli:main"

[project.urls]
Homepage = "https://github.com/hardinet/supply-chain-control-tower"
Repository = "https://github.com/hardinet/supply-chain-control-tower"

[tool.hatch.build.targets.wheel]
packages = ["src/sctower"]

# ---------------------------------------------------------------------------
# Tooling
# ---------------------------------------------------------------------------
[tool.black]
line-length = 100
target-version = ["py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "W",   # pycodestyle
    "F",        # pyflakes
    "I",        # isort
    "B",        # flake8-bugbear
    "UP",       # pyupgrade
    "C4",       # flake8-comprehensions
    "SIM",      # flake8-simplify
    "PTH",      # flake8-use-pathlib
    "RUF",      # ruff-specific
]
ignore = [
    "B008",   # function call in argument defaults (Dash/Plotly patterns)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]
# Third-party libs without complete type information.
[[tool.mypy.overrides]]
module = [
    "lightgbm.*",
    "statsmodels.*",
    "prophet.*",
    "dash.*",
    "dash_bootstrap_components.*",
    "plotly.*",
    "sklearn.*",
    "holidays.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra -q --cov=sctower --cov-report=term-missing --cov-report=xml --cov-fail-under=80"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.coverage.run]
branch = true
source = ["sctower"]
omit = ["src/sctower/app/*", "src/sctower/cli.py"]

[tool.coverage.report]
show_missing = true
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:", "raise NotImplementedError"]
